Improved rewards API , ResponseEntity, sorting and unit tests